--- a/VRChat/44/1093544.html
+++ b/VRChat/44/1093544.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "V2ghrntDJYd+MZVWsQM10mtrlWytRjnIaEK6zBN4ywU="></script>
+    "LeH30Z2iTpgZZ5MQXx7tJ9aueqBWO1/iODvaTYUj64A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"麻雀牌「北」","description":"麻雀牌の北です。VRChatなどでの使用を想定しています。\n\nポリゴン数：60\n\n商用・私的利用などご自由にお使いください　改造可\n\n\n","url":"https://booth.pm/ja/items/1093544","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9a05bd42-3027-4d3a-8df6-055a7ed44526/i/1093544/2cb3166f-dda5-4aa4-84c0-2e057043d620_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="V2ghrntDJYd+MZVWsQM10mtrlWytRjnIaEK6zBN4ywU="></script>
+    nonce="LeH30Z2iTpgZZ5MQXx7tJ9aueqBWO1/iODvaTYUj64A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1093544/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1093544/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
