--- a/VRChat/99/1093399.html
+++ b/VRChat/99/1093399.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "L+9JfmdsCGwDteK4UiJoxR6pSUWyEUBj9ZZJghC/y2o="></script>
+    "a6cXPnCfeaKLRqdr4J/I+pZiQ1VKF2TvgBiJzXVgXsY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クローバーの髪飾り【オリジナル3Dモデル】","description":"【説明】\nVRChatでの使用を想定したオリジナル3Dモデル\nその他ゲームや動画等でも使用可能\n\n制作者:Tokunaga_ac\n\n\n同梱のunity packageはマテリアル等セットアップ済み\n\n\n本体はまんまるシェーダー、透明部分はメガネ向けガラスシェーダーを使用\n\n\n【内容物】\n\n■Unity package\nHO_CloverA.unitypackage\n\n■フォルダ\nHO_CloverA_contents\n　unitypackageに含まれているFBX、テクスチャデータ\n\n\n◆◇◆【利用規約】◆◇◆\n\nhttps://docs.google.com/document/d/1L3RhJVXeK9gEyJG3I2trR6v0SWS8bVYIy4ju1dvHKwY/edit?usp=sharing\n\n\n\n\n\n【連絡先】\n\nTwitter:Tokunaga_ac\nDiscord:Tokunaga_ac#3200\nEmail  :atelieralca01@gmail.com","url":"https://booth.pm/ja/items/1093399","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6ac10b7b-256b-4e3b-b6d6-61437066f561/i/1093399/fbff7d7e-5761-4825-bd59-7b356beeb391_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L+9JfmdsCGwDteK4UiJoxR6pSUWyEUBj9ZZJghC/y2o="></script>
+    nonce="a6cXPnCfeaKLRqdr4J/I+pZiQ1VKF2TvgBiJzXVgXsY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1093399/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1093399/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               165
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
